# fifth-task

pallets/erc20/: Cargo.toml
pallets/erc20/src/: lib.rs
pallets/template/: Cargo.toml
